bk_ida/gccida/g0/initialize_for_inline
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_for_inline/src/integrate.c:790:25: error: use of undeclared identifier 'machine_mode'
preal = gen_realpart( ( machine_mode)*( unsigned __int8 *)( p->fld[0].rtwint + 2), p); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_for_inline/src/integrate.c:791:25: error: use of undeclared identifier 'machine_mode'
pimag = gen_imagpart( ( machine_mode)*( ( unsigned __int8 *)preal + 2), p); 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_for_inline/src/obj/integrate.o] Error 1
